--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.5
+
+* Complete re-write, now fully asynchronous (uses Python's AsyncIO library)
+
 Version 0.4
 
 * Ported to Python 3.6+
